grammar/grammar variables.txt
! Welcome to GOLD Parser Builder 5.2

IDE    = {Letter}{AlphaNumeric}*

! The grammar starts below
<Program> ::= <VariablesBlock>          
<VariablesBlock> ::=  variables '{' <Variables> '}'
<Variables> ::= <Variable> | <Variable> <Variables>
<Variable> ::= <Type> <IDE> ';' | <Type> <IDE> ',' <MultipleVariables> ';' 
<MultipleVariables> ::= <IDE> |  <IDE> ',' <MultipleVariables>
<Type> ::= int | real | boolean | string
<IDE> ::= IDE
